[gd_scene load_steps=6 format=3 uid="uid://cy8x42iv35obh"]

[ext_resource type="Script" path="res://Scripts/Board.gd" id="1_nmpcl"]
[ext_resource type="Texture2D" uid="uid://bs572o7x26hy4" path="res://Sprites/CombatGridSlot.png" id="2_15n04"]
[ext_resource type="Texture2D" uid="uid://fb7jkesebdwd" path="res://Sprites/previous_page.png" id="3_p7d3q"]
[ext_resource type="Texture2D" uid="uid://bf3jcvepofcha" path="res://Sprites/next_page.png" id="4_amsfd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_peoqx"]
size = Vector2(596, 163)

[node name="Board" type="Area2D"]
script = ExtResource("1_nmpcl")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4.65625, 1.27344)
texture = ExtResource("2_15n04")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(298, 81.5)
shape = SubResource("RectangleShape2D_peoqx")

[node name="BoardNav" type="Node2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="PreviousButton" type="Button" parent="BoardNav"]
offset_left = 1084.0
offset_top = 328.0
offset_right = 1142.0
offset_bottom = 386.0
disabled = true
icon = ExtResource("3_p7d3q")
flat = true

[node name="NextButton" type="Button" parent="BoardNav"]
offset_left = 1136.0
offset_top = 328.0
offset_right = 1194.0
offset_bottom = 386.0
icon = ExtResource("4_amsfd")
flat = true

[node name="DeploymentPoints" type="Label" parent="."]
offset_left = 600.0
offset_top = 137.0
offset_right = 644.0
offset_bottom = 165.0
text = "0/0"
vertical_alignment = 1

[connection signal="pressed" from="BoardNav/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="BoardNav/NextButton" to="." method="_on_next_button_pressed"]
